:-1: Whoops! That broke center alignment, now fixed.

--- a/styles/miner.css
+++ b/styles/miner.css
@@ -7,7 +7,7 @@ body
 	color: white;
 }
 
-table { text-align: div class="center"; }
+table { text-align: center; }
 
 .bubble
 {
